Añadido el archivo ignorado.

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -19,18 +19,18 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li class="menu selected">
-						<a href="about.html">About</a>
+						<a href="#">About</a>
 						<ul class="primary">
 							<li>
-								<a href="product.html">Product</a>
+								<a href="#">Product</a>
 							</li>
 						</ul>
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="#">Blog</a>
 						<ul class="secondary">
 							<li>
-								<a href="singlepost.html">Single post</a>
+								<a href="#">Single post</a>
 							</li>
 						</ul>
 					</li>
