--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Frozen Yogurt Shop</title>
+	<title>Tarea Git</title>
+	<meta name="author" content="Celia Corrales">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -19,23 +20,23 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li class="menu">
-						<a href="about.html">About</a>
+						<a href="#">About</a>
 						<ul class="primary">
 							<li>
-								<a href="product.html">Product</a>
+								<a href="#">Product</a>
 							</li>
 						</ul>
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="#">Blog</a>
 						<ul class="secondary">
 							<li>
-								<a href="singlepost.html">Single post</a>
+								<a href="#">Single post</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="#">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -44,7 +45,7 @@
 			<div class="header">
 				<img src="images/bg-home.jpg" alt="">
 				<div>
-					<a href="product.html">Freeze Delight</a>
+					<a href="#">Freeze Delight</a>
 				</div>
 			</div>
 			<div class="body">
@@ -61,19 +62,19 @@
 				<div>
 					<ul>
 						<li>
-							<a href="product.html" class="product"></a>
+							<a href="#" class="product"></a>
 							<h1>PRODUCTS</h1>
 						</li>
 						<li>
-							<a href="about.html" class="about"></a>
+							<a href="ejemplo.html" class="about"></a>
 							<h1>OUR STORY</h1>
 						</li>
 						<li>
-							<a href="product.html" class="flavor"></a>
+							<a href="#" class="flavor"></a>
 							<h1>FLAVORS</h1>
 						</li>
 						<li>
-							<a href="contact.html" class="contact"></a>
+							<a href="#" class="contact"></a>
 							<h1>OUR LOCATION</h1>
 						</li>
 					</ul>
