Cambios de estilo confirmados

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tarea Git</title>
+	<title>Tarea Git Parte 2</title>
 	<meta name="author" content="Celia Corrales">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
 </head>
 <body>
+<!--Los que estamos al otro lado te saludan-->
 	<div id="page">
 		<div id="header">
 			<div>
