--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="articulo.html" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
 					<li class="selected">
-						<a href="index.html">Home</a>
+						<a href="articulo.html">Home</a>
 					</li>
 					<li class="menu">
 						<a href="#">About</a>
